--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <!-- <base href="https:/pages.github.io/myProject/"> -->
+  <base href="https://jmsherry.github.io/new-website/">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/icons/favicon-32x32.png" sizes="32x32" />
