--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 <body>
   <h1>Modules</h1>
-  <img src="/cat.jpeg" alt="cat">
+  <img src="cat.jpeg" alt="cat">
   <a href="/">Home</a>
   <ul>
     <li>item 1</li>
