--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <body>
   <h1>Modules</h1>
   <img src="cat.jpeg" alt="cat">
-  <a href="/">Home</a>
+  <a href="index.html">Home</a>
   <ul>
     <li>item 1</li>
     <li>item 2</li>
